convert from servlet to micronaut